# totally-normal-keyboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Rakefile  build_config.rb  common.rb  main.rb  mrbgem.rake
include/: tnk_common.h  tnk_path.h
mrblib/: 0debug.rb  error.rb  hidg.rb  hidraw.rb  hotkeys.rb  input_event.rb  runner.rb  tnk.rb
scripts/: gen.rb  gen_keymap.sh  gen_keymap_h.sh
share/: gen_keymap_h.sh  main.rb  user.rb
src/: tnk.c  tnk.cpp  usb-gadget.sh  usbgadget.service.in
tools/tnk/: tnk.c
